--- a/lab11.html
+++ b/lab11.html
@@ -44,15 +44,15 @@
 
 
    <nav>
-  <a href="file:///Users/safa/Documents/lab12.html">Click me for stage 2</a>
+  <a href="lab12.html">Click me for stage 2</a>
   </nav>
 
 
   <nav>
-<a href="file:///Users/safa/Documents/lab13.html">Click me for stage 3</a>
+<a href="lab13.html">Click me for stage 3</a>
   </nav>
   <nav>
-  <a href="file:///Users/safa/Documents/index.html">Main Page</a>
+  <a href="index.html">Main Page</a>
   </nav>
 
 
