--- a/lab12.html
+++ b/lab12.html
@@ -44,13 +44,13 @@
 
 <p>In Egypt, I learned how to love, how to appreciate, how to live. I learned about racism,fears everything that has prepared for this moment. I learned about what I owe myself and society. I planned out what I needed and where I wanted to go.</<p>>
  <nav>
-<a href="file:///Users/safa/Documents/lab13.html">Click me for stage 3</a>
+<a href="lab13.html">Click me for stage 3</a>
 </nav>
  <nav>
-<a href="file:///Users/safa/Documents/lab11.html">Click me for stage 1</a>
+<a href="lab11.html">Click me for stage 1</a>
 </nav>
 <nav>
-<a href="file:///Users/safa/Documents/index.html">Main Page</a>
+<a href="index.html">Main Page</a>
 </nav>
 
 
