--- a/lab13.html
+++ b/lab13.html
@@ -46,16 +46,15 @@
 <p>In America, I learned its okay to not know, its okay to fail. It is hard to succeed. But I sense greatness in this stage of my life.</p>
 
   <nav>
-  <a href="file:///Users/safa/Documents/lab11.html">Take me back to stage 1</a>
-  </nav>
-
-  <nav>
-<a href="file:///Users/safa/Documents/lab12.html">Take me back to stage 2</a>
-  </nav>
+  <a href="lab11.html">Take me back to stage 1</a> |
 
 
-  <nav>
-<a href="file:///Users/safa/Documents/index.html">Main Page</a>
+
+<a href="lab12.html">Take me back to stage 2</a> |
+
+
+
+<a href="index.html">Main Page</a>
   </nav>
 
 
