--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <p>The person I am today is a combination and the manifestation of the various identities I have gathered throughout the unique stages of my life which I categorize as the places I have lived.</p>
 <h2>Stage 1 perspective 1</h2>
 <nav>
-<a href="file:///Users/safa/Documents/lab1/lab11.html" onclick=“window.open("file:///Users/safa/Documents/lab1/lab11.html", "_self");”>The UNITED STATES OF AMERICA</a>
+<a href="lab11.html" >The UNITED STATES OF AMERICA</a>
 </nav>
 <h2>Stage 2 perspective 2</h2>
 <nav>
-<a href="lab12.html" onclick=“window.open("lab12.html", "_self");”>Egypt</a>
+<a href="lab12.html">Egypt</a>
 </nav>
 <h2>Stage 3 perspective 3</h2>
 <nav>
-<a href="file:///Users/safa/Documents/lab13.html">The UNITED STATES OF AMERICA</a>
+<a href="lab13.html">The UNITED STATES OF AMERICA</a>
 </nav>
 <h1>And That Is How Safa Came To Be!</h1>
 <p> <a href="https://www.facebook.com/safa.eltgani">To learn more about me just message me on Facebook</a> </p>
