--- a/lab13.html
+++ b/lab13.html
@@ -10,7 +10,7 @@
 <body style="background-color: #e0876a">
   <link rel="stylesheet" type="text/CSS"
   href="lab1.css">
-<img src="/Users/safa/Downloads/IMG_0235.jpg" alt="Life in madison"  width="500" height="500">
+<img src="IMG_0235.jpg" alt="Life in madison"  width="500" height="500">
 <div>These are pictures of me now, with my friends,and change </div>
 <h1>Welcome to the third stage of my life</h1>
 
