--- a/lab11.html
+++ b/lab11.html
@@ -10,7 +10,7 @@
 <body style="background-color: #f9ccac">
   <link rel="stylesheet" type="text/CSS"
   href="lab1.css">
-<img src="/Users/safa/Downloads/IMG_0206.jpg" alt="Life in austin"  width="500" height="500">
+<img src="IMG_0206.jpg" alt="Life in austin"  width="500" height="500">
 <div>These are pictures of me growing up in Austin, with my friends, hobbies, and teacher.</div>
 <h1>Welcome to the first stage of my life</h1>
 
@@ -44,14 +44,10 @@
 
 
    <nav>
-  <a href="lab12.html">Click me for stage 2</a>
-  </nav>
+  <a href="lab12.html">Click me for stage 2</a>|
 
+<a href="lab13.html">Click me for stage 3</a>|
 
-  <nav>
-<a href="lab13.html">Click me for stage 3</a>
-  </nav>
-  <nav>
   <a href="index.html">Main Page</a>
   </nav>
 
