--- a/lab11.html
+++ b/lab11.html
@@ -10,7 +10,7 @@
 <body style="background-color: #f9ccac">
   <link rel="stylesheet" type="text/CSS"
   href="lab1.css">
-<img src="/Users/safa/Documents/lab1/IMG_0206.jpg" alt="Life in austin"  width="500" height="500">
+<img src="IMG_0206.jpg" alt="Life in austin"  width="500" height="500">
 <div>These are pictures of me growing up in Austin, with my friends, hobbies, and teacher.</div>
 <h1>Welcome to the first stage of my life</h1>
 
