--- a/lab12.html
+++ b/lab12.html
@@ -12,7 +12,7 @@
 ">
   <link rel="stylesheet" type="text/CSS"
   href="lab1.css">
-<img src="/Users/safa/Downloads/IMG_0222.jpg" alt="Life in Egypt"  width="500" height="500">
+<img src="IMG_0222.jpg" alt="Life in Egypt"  width="500" height="500">
 <div>These are pictures of me growing up in Egypt, with my friends, hobbies, teachers,and present memories </div>
 <h1>Welcome to the second stage of my life</h1>
 
